--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <title>JavaScript-инженер</title>
     <link rel="stylesheet" href="./styles/editor.css" />
     <link rel="stylesheet" href="./styles/page.css" />
+    <script src="index.js"></script>
   </head>
   <body>
     <div class="container">
       <main class="papercard">
         <div class="editor">
-          <div class="edit-area" placeholder="Type something..."></div>
+          <div class="edit-area" placeholder="Type something..." contenteditable="true"></div>
+
           <div class="toolkit">
             <button class="head-1">
               <img src="assets/icons_h1.svg" alt="Head 1 button icon" />
@@ -25,6 +27,11 @@
               <img src="assets/icons_italic.svg" alt="Italic button icon" />
             </button>
           </div>
+
+<!--          <h1>Heading 1</h1>-->
+<!--          <h2>Heading 2</h2>-->
+<!--          <b>Bold</b>-->
+<!--          <i>Italic</i>-->
         </div>
       </main>
       <footer>
