--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>JavaScript-инженер</title>
     <link rel="stylesheet" href="./styles/editor.css" />
     <link rel="stylesheet" href="./styles/page.css" />
-    <script src="index.js"></script>
+    <script src="js/index.js"></script>
   </head>
   <body>
     <div class="container">
