focus on main functionality, comment some unused code, add testing div, implement logic for applying styles for all buttons, prevent wrapping already wrapped text

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   </head>
   <body>
     <div class="container">
+      <div id="test"></div>
+
       <main class="papercard">
         <div class="editor">
           <div class="edit-area" placeholder="Type something..." contenteditable="true"></div>
