--- a/index.html
+++ b/index.html
@@ -9,31 +9,26 @@
   </head>
   <body>
     <div class="container">
-      <div id="test"></div>
+      <div class="js-debug"></div>
 
       <main class="papercard">
         <div class="editor">
           <div class="edit-area" placeholder="Type something..." contenteditable="true"></div>
 
-          <div class="toolkit">
-            <button class="head-1">
+          <div class="toolkit js-toolkit">
+            <button data-tag="H1" class="head-1">
               <img src="assets/icons_h1.svg" alt="Head 1 button icon" />
             </button>
-            <button class="head-2">
+            <button data-tag="H2" class="head-2">
               <img src="assets/icons_h2.svg" alt="Head 2 button icon" />
             </button>
-            <button class="bold">
+            <button data-tag="B" class="bold">
               <img src="assets/icons_bold.svg" alt="Bold button icon" />
             </button>
-            <button class="italic">
+            <button data-tag="I" class="italic">
               <img src="assets/icons_italic.svg" alt="Italic button icon" />
             </button>
           </div>
-
-<!--          <h1>Heading 1</h1>-->
-<!--          <h2>Heading 2</h2>-->
-<!--          <b>Bold</b>-->
-<!--          <i>Italic</i>-->
         </div>
       </main>
       <footer>
